<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2022 Kaleyra @ https://www.kaleyra.com
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/qr_code"
        android:contentDescription="@string/use_qr_code"
        android:title="@string/use_qr_code"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/reset_all"
        android:contentDescription="@string/reset_all"
        android:title="@string/reset_all"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/clear_all"
        android:title="@string/clear_all"
        android:visible="true"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/save"
        android:contentDescription="@string/save"
        android:title="@string/save"
        app:showAsAction="collapseActionView" />
</menu>